--- a/src/app/pages/organization/employees/templates/personal/personal-view.html
+++ b/src/app/pages/organization/employees/templates/personal/personal-view.html
@@ -149,8 +149,8 @@
           <div class="row">
             <div class="col-sm-4">
               <div class="form-group">
-                 <label  ng-bind="page.pageinfo.fields.ECPersonName.text"></label>
-                <field-box ng-column="page.pageinfo.fields.ECPersonName" ng-entity="empTabCtrl.empEmgContact" form="editForm"></field-box>
+                 <label  ng-bind="emgContactPage.pageinfo.fields.ECPersonName.text"></label>
+                <field-box ng-column="emgContactPage.pageinfo.fields.ECPersonName" ng-entity="empTabCtrl.empEmgContact" form="editForm"></field-box>
    
                 <!--<label for="inputEmgName">Name</label>
                 <input type="text" class="form-control" id="inputEmgName" text-Only-With-Space ng-model="empTabCtrl.empEmgContact.ECPersonName">-->
@@ -158,8 +158,8 @@
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                 <label  ng-bind="page.pageinfo.fields.ECContactNo.text"></label>
-                <field-box ng-column="page.pageinfo.fields.ECContactNo" ng-entity="empTabCtrl.empEmgContact" form="editForm"></field-box>
+                 <label  ng-bind="emgContactPage.pageinfo.fields.ECContactNo.text"></label>
+                <field-box ng-column="emgContactPage.pageinfo.fields.ECContactNo" ng-entity="empTabCtrl.empEmgContact" form="editForm"></field-box>
    
                 <!--<label for="inputEmgMobile">Mobile</label>
                 <input type="text" class="form-control" id="inputEmgMobile" numeric-Only minlength="10" maxlength="17" ng-model="empTabCtrl.empEmgContact.ECContactNo" required>-->
@@ -167,8 +167,8 @@
             </div>
             <div class="col-sm-4">
               <div class="form-group">
-                  <label  ng-bind="page.pageinfo.fields.ECAddress.text"></label>
-                <field-box ng-column="page.pageinfo.fields.ECAddress" ng-entity="empTabCtrl.empEmgContact" form="editForm"></field-box>
+                  <label  ng-bind="emgContactPage.pageinfo.fields.ECAddress.text"></label>
+                <field-box ng-column="emgContactPage.pageinfo.fields.ECAddress" ng-entity="empTabCtrl.empEmgContact" form="editForm"></field-box>
 
                 <!--<label for="inputEmgAddress">Address</label>
                 <input type="text" class="form-control" id="inputEmgAddress" maxlength="50" ng-model="empTabCtrl.empEmgContact.ECAddress">-->
