--- a/src/app/common/components/gridBox/gridBox.html
+++ b/src/app/common/components/gridBox/gridBox.html
@@ -79,7 +79,7 @@
                     </div>
                 </div>
             </div> 
-            <form ng-show="page.showAddRecord" ng-submit="saveForm(editForm)" name="editForm">
+            <form ng-show="page.showAddRecord" ng-submit="saveForm(editForm)" name="editForm" novalidate >
                 <div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
                     <div class="panel-heading clearfix" style="padding-top:0px;">
                         <div class="row">
