--- a/src/app/common/components/fieldBox/fieldBox.html
+++ b/src/app/common/components/fieldBox/fieldBox.html
@@ -132,8 +132,8 @@
     </i>
     <!--info area-->
     <span id="inputGroupSuccess1Status" class="sr-only">(success)</span>
-    <span ng-show="editForm[col.name]['$error']['blacklist']">
+    <!--<span ng-show="editForm[col.name]['$error']['blacklist']">
           The phrase "{{entity[col.name]}}" is blacklisted</span>
     <span  ng-show="editForm[col.name]['$error']['required']">required</span>
-    {{entity[col.name]}}
+    {{entity[col.name]}}-->
 </div>
