--- a/src/app/pages/organization/employees/add/employeeAdd.html
+++ b/src/app/pages/organization/employees/add/employeeAdd.html
@@ -64,7 +64,7 @@
         <div class="form-group">
           <label for="inputDOB">Date Of Joining*</label>      
           <datepicker date-format="dd-MMMM-yyyy" selector="form-control">           
-            <input ng-model="addCtrl.empAdd.JDDate" name="doj" type="text" class="form-control"   placeholder="dd-mm-yyyy" required/>         
+            <input ng-model="addCtrl.empAdd.JDDate" name="doj" type="text" class="form-control"   placeholder="dd-mm-yyyy" required >         
            
           </datepicker>
         </div>
