--- a/src/app/pages/organization/employees/templates/account/account-view.html
+++ b/src/app/pages/organization/employees/templates/account/account-view.html
@@ -1,4 +1,5 @@
-<form ng-submit="empTabCtrl.saveFormCommon()">
+<div >
+<form ng-submit="empTabCtrl.saveFormCommon()" >
   <div class="panel panel-default bootstrap-panel xmedium-panel pnlScroll">
     <edit-panel-head page-title="page.pageinfo.title" reset-form="empTabCtrl.resetFormCommon()" clear-form="empTabCtrl.clearFormCommon()"
       condition="true"></edit-panel-head>
@@ -20,7 +21,7 @@
         </div>
       </div>
 
-      <div ng-show="(empTabCtrl.entity.ADSalaryModeId=='3')">
+      <div ng-show="(empTabCtrl.entity.ADSalaryModeId=='3')" style="min-height:800px">
         <h3 class="">Bank Detail</h3>
         <hr>
         <div class="row">
@@ -186,3 +187,4 @@
       </div>
     </div>
 </form>
+</div>
