--- a/src/app/pages/organization/employees/upload/empupload.html
+++ b/src/app/pages/organization/employees/upload/empupload.html
@@ -380,12 +380,12 @@
                             <h3 class="with-line">Added Record</h3>
                             <button type="button" class="btn btn-warning" ng-show="tabCtrl.addedDataList.length>0" ng-click="tabCtrl.downloadExportAddedData()">
                            Export Added Result</button>
-                            <div>
+                            
                                 <div>
                                     <div id="grid3" ui-grid="tabCtrl.succesResultGridOptions" class="djGrid" ui-grid-pagination ui-grid-edit ui-grid-cellnav>
                                     </div>
                                 </div>
-                            </div>
+                            
                         </div>
                     </div>
 
@@ -395,7 +395,7 @@
                 <div class="row">
                     <div class="col-md-12">
                         <button type="button" ng-click="back('organization.employees.list')" class="btn btn-default">
-                                    <Back></Back>
+                                    Back
                                 </button>
                     </div>
                 </div>
