--- a/src/app/common/components/fieldBox/fieldBox.html
+++ b/src/app/common/components/fieldBox/fieldBox.html
@@ -1,4 +1,7 @@
-<div ng-switch="col.type" class="form-group  has-feedback" ng-class="{'has-success':hasSuccess(),'has-error':hasError(),'has-warning':hasWarning()}">
+<!--{{col.showError}}-->
+<div popover-animation="true" uib-popover-html="col.errorText" popover-trigger="manual" popover-is-open="col.showError" popover-placement="right"
+    ng-switch="col.type" class="form-group  has-feedback"
+         ng-class="{'has-success':hasSuccess(),'has-error':hasError(),'has-warning':hasWarning()}">
     <div class="input-group">
         <!--Textbox-->
         <!--<span class="input-group-addon  addon-left" ng-show="col.required">
@@ -7,7 +10,7 @@
 
         <!--left icon-->
         <span class="input-group-addon  addon-left" ng-show="col.type=='email'">
-              @ <!--<i class="fa fa-at" aria-hidden="true"></i>-->
+              <i class="fa fa-at" aria-hidden="true"></i>
         </span>
         <span class="input-group-addon  addon-left" ng-show="col.type=='mobile'">
                 <i class="fa fa-mobile" aria-hidden="true"></i>
@@ -20,44 +23,26 @@
         </span>
 
 
-        <input  ng-switch-when="textbox" name="{{col.name}}" id="{{col.name}}" placeholder="{{col.place}}" maxlength="{{col.maxLength}}"
-            ng-model="entity[col.name]" type="text" class="form-control" ng-minlength="1" ng-maxlength="col.maxLength" ng-required="col.required"
+        <input valid-text ng-column="col" ng-switch-when="textbox|email|mobile|aadharno|pancard|zipcode|placename_alpha|placename_alphanum|name_nospace|name_withspace"
+            ng-switch-when-separator="|" name="{{col.name}}" id="{{col.name}}" placeholder="{{col.place}}" maxlength="{{col.maxLength}}"
+            ng-model="entity[col.name]" type="text" class="form-control" ng-minlength="2" ng-maxlength="col.maxLength" ng-required="col.required"
+            class="form-control"
         />
 
-        <!--email-->
-        <input ng-switch-when="email" name="{{col.name}}" ng-model="entity[col.name]" type="email" class="form-control" ng-minlength="10"
-            ng-maxlength="col.maxLength" id="{{col.name}}" ng-required="col.required" placeholder="{{col.place}}" />
-
-        <!--mobile-->
-        <input ng-switch-when="mobile" name="{{col.name}}" ng-model="entity[col.name]" type="number" class="form-control" ng-minlength="col.maxLength"
-            ng-maxlength="col.maxLength" id="{{col.name}}" ng-required="col.required" placeholder="{{col.place}}" ng-pattern="/(7|8|9)\d{9}/"
-            maxlength="{{col.maxLength}}" />
-
-        <!--zipcode-->
-        <input ng-switch-when="zipcode" name="{{col.name}}" ng-model="entity[col.name]" type="number" class="form-control" ng-minlength="col.maxLength"
-            ng-maxlength="6" id="{{col.name}}" ng-required="col.required" placeholder="{{col.place}}" ng-pattern="/^(\d{6}(-\d{6})?|[A-Z]\d[A-Z] *\d[A-Z]\d)$/"
-            maxlength="6" />
-
-        <!--aadhar no-->
-        <input ng-switch-when="aadharno" name="{{col.name}}" ng-model="entity[col.name]" type="number" class="form-control" ng-minlength="12"
-            ng-maxlength="12" id="{{col.name}}" ng-required="col.required" placeholder="{{col.place}}" 
-            ng-pattern="\d{4}\s\d{4}\s\d{4}$"
-            maxlength="12" />
-
         <!--Select-->
-        <select name="{{col.name}}" id="{{col.name}}" ng-model="entity[col.name]" class="form-control" ng-options="opt.value as opt.name for opt in col.options"
+        <select valid-text ng-column="col"  name="{{col.name}}" id="{{col.name}}" ng-model="entity[col.name]" class="form-control" ng-options="opt.value as opt.name for opt in col.options"
             ng-switch-when="select" placeholder="{{col.place}}" ng-required="col.required"></select>
 
         <!--UISelect-->
-        <select id="{{col.name}}" name="{{col.name}}" ng-model="entity[col.name]" class="form-control" ng-options="opt.id as opt.name for opt in col.options"
+        <select valid-text ng-column="col"  id="{{col.name}}" name="{{col.name}}" ng-model="entity[col.name]" class="form-control" ng-options="opt.id as opt.name for opt in col.options"
             ng-switch-when="uiselect" placeholder="{{col.place}}" ng-required="col.required"></select>
 
         <!--strapselect-->
-        <select id="{{col.name}}" name="{{col.name}}" ng-model="entity[col.name]" class="form-control" ng-options="opt.value as opt.name for opt in col.options | filter:{ '{{col.propColName}}': entity[col.propColName] }"
+        <select valid-text ng-column="col"  id="{{col.name}}" name="{{col.name}}" ng-model="entity[col.name]" class="form-control" ng-options="opt.value as opt.name for opt in col.options | filter:{ '{{col.propColName}}': entity[col.propColName] }"
             ng-switch-when="strapselect" data-placeholder="{{col.place}}" ng-required="col.required"></select>
 
         <!--multi-select-->
-        <select id="{{col.name}}" name="{{col.name}}" ng-model="entity[col.name]" type="date" class="form-control" ng-options="opt.value as opt.name for opt in col.options"
+        <select valid-text ng-column="col"  id="{{col.name}}" name="{{col.name}}" ng-model="entity[col.name]" type="date" class="form-control" ng-options="opt.value as opt.name for opt in col.options"
             ng-switch-when="multi-select" multiple placeholder="{{col.place}}" ng-required="col.required"></select>
         <!--Checkbox-->
         <div ng-switch-when="checkbox">
@@ -111,6 +96,8 @@
             <i aria-hidden="true" class="fa font-red fa-times" ng-show="(editForm[col.name]['$viewValue']!='' && !editForm[col.name]['$valid'] && editForm[col.name]['$touched'])"></i>
             <i aria-hidden="true" class="fa font-red fa-asterisk" ng-show="(editForm[col.name]['$viewValue']===undefined ||editForm[col.name]['$viewValue']=='' ) && col.required"></i>
         </span>-->
+
+        
     </div>
     <!--error icon-->
     <!--<i class="ion-android-cancel form-control-feedback" aria-hidden="true"></i>-->
@@ -125,15 +112,36 @@
     <i ng-class="{'form-control-feedback': true, 
             'ion-checkmark-circled': hasSuccess(), 
             'ion-android-cancel': hasError(), 
-            'ion-asterisk font-red': hasRequired(), 
+            'ion-ios-medical font-red': hasRequired(), 
             'ion-alert-circled': hasWarning(), 
             }">
 
     </i>
     <!--info area-->
-    <span id="inputGroupSuccess1Status" class="sr-only">(success)</span>
+    <!--<span id="inputGroupSuccess1Status" class="sr-only">(success)</span>-->
     <!--<span ng-show="editForm[col.name]['$error']['blacklist']">
           The phrase "{{entity[col.name]}}" is blacklisted</span>
-    <span  ng-show="editForm[col.name]['$error']['required']">required</span>
-    {{entity[col.name]}}-->
+    <span  ng-show="editForm[col.name]['$error']['required']">required</span>-->
+    <span ng-show="editForm['$submitted'] && ngModel.$error.required" class="help-block" for="col.name">{{col.text}} is required</span>
+    <span ng-show="editForm['$submitted'] && ngModel.$error.emailError" class="help-block" for="col.name">{{col.text}} is not valid</span>
 </div>
+<style>
+    .popover {
+        width: 300px;
+        height: 50px;
+    }
+
+    .help-block {
+        color: red;
+        font-size: 11px;
+        font-family: Arial, Helvetica, sans-serif;
+        display: block;
+        text-align: left;
+        margin-top: 0px;
+        padding-top: 0px;
+    }
+    .input-group
+    {
+        margin-bottom: 0px;
+    }
+</style>
