--- a/src/app/pages/organization/employees/add/employeeAdd.html
+++ b/src/app/pages/organization/employees/add/employeeAdd.html
@@ -166,7 +166,7 @@
     </div>
     <div class="text-center">
       <button type="submit" class="btn btn-primary">Save</button>
-      <button type="button" ng-click="addCtrl.empAdd=[]" class="btn btn-primary">Reset</button>
+      <button type="button" ng-click="addCtrl.empAdd=[]" class="btn btn-primary">Clear</button>
       <button type="button" ng-click="back('organization.employees.list')" class="btn btn-primary">Back</button>
     </div>
   </form>
